--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,12 @@
 
     <dependencies>
 
+        <dependency>
+            <groupId>com.google.code.kaptcha</groupId>
+            <artifactId>kaptcha</artifactId>
+            <version>2.3</version>
+        </dependency>
+
         <!-- https://mvnrepository.com/artifact/org.springframework/spring-web -->
         <dependency>
             <groupId>org.springframework</groupId>
@@ -192,5 +198,13 @@
 
 
     </build>
+
+
+    <repositories>
+        <repository>
+            <id>myrepo1</id>
+            <url>https://maven.jahia.org/maven2/</url>
+        </repository>
+    </repositories>
 
 </project>
