--- a/pom.xml
+++ b/pom.xml
@@ -107,6 +107,15 @@
             <version>5.6.15.Final</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-jpamodelgen -->
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-jpamodelgen</artifactId>
+            <version>5.6.15.Final</version>
+            <scope>provided</scope>
+        </dependency>
+
+
 
         <!--
         https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-engine -->
@@ -159,7 +168,17 @@
                 <configuration>
                     <source>${java.version}</source>
                     <target>${java.version}</target>
+
+
+
                     <annotationProcessorPaths>
+
+                        <path>
+                            <groupId>org.hibernate</groupId>
+                            <artifactId>hibernate-jpamodelgen</artifactId>
+                            <version>5.6.15.Final</version>
+                        </path>
+
                         <path>
                             <groupId>org.projectlombok</groupId>
                             <artifactId>lombok</artifactId>
